@@ -32,6 +32,8 @@ Contributors:
 
 int handle__packet(struct mosquitto_db *db, struct mosquitto *context)
 {
+	int rc = MOSQ_ERR_INVAL;
+
 	if(!context) return MOSQ_ERR_INVAL;
 
 	switch((context->in_packet.command)&0xF0){
@@ -56,7 +58,8 @@ int handle__packet(struct mosquitto_db *db, struct mosquitto *context)
 		case CMD_SUBSCRIBE:
 			return handle__subscribe(db, context);
 		case CMD_UNSUBSCRIBE:
-			return handle__unsubscribe(db, context);
+			rc = handle__unsubscribe(db, context);
+			break;
 #ifdef WITH_BRIDGE
 		case CMD_CONNACK:
 			return handle__connack(db, context);
@@ -68,8 +71,18 @@ int handle__packet(struct mosquitto_db *db, struct mosquitto *context)
 		case CMD_AUTH:
 			return handle__auth(db, context);
 		default:
-			/* If we don't recognise the command, return an error straight away. */
-			return MOSQ_ERR_PROTOCOL;
+			rc = MOSQ_ERR_PROTOCOL;
 	}
+
+	if(context->protocol == mosq_p_mqtt5){
+		if(rc == MOSQ_ERR_PROTOCOL){
+			send__disconnect(context, MQTT_RC_PROTOCOL_ERROR, NULL);
+		}else if(rc == MOSQ_ERR_MALFORMED_PACKET){
+			send__disconnect(context, MQTT_RC_MALFORMED_PACKET, NULL);
+		}else if(rc == MOSQ_ERR_UNKNOWN || rc == MOSQ_ERR_NOMEM){
+			send__disconnect(context, MQTT_RC_UNSPECIFIED, NULL);
+		}
+	}
+	return rc;
 }
 
