@@ -17,7 +17,7 @@ test-compile :
 ptest : test-compile
 	./test.py
 
-test : test-compile 01 02 03 04 05 06 07 08 09 10 11 12
+test : test-compile 01 02 03 04 05 06 07 08 09 10 11 12 13
 
 01 :
 	./01-connect-anon-denied.py
@@ -216,3 +216,6 @@ endif
 	./12-prop-subpub-content-type.py
 	./12-prop-subpub-payload-format.py
 	./12-prop-topic-alias-invalid.py
+
+13 :
+	./13-malformed-unsubscribe-v5.py
